--- a/dom practice.html
+++ b/dom practice.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport   width-device-width initial-scale=1.0 ">
         <meta http-equiv="X-UA-compatible" content="ie-edge ">
-        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="bootstrap.css">
         <title>item list</title>
 
     </head>
